# rlic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
scripts/: check_sdist.py  pre_publish_checks.py  visualize_regression_outputs.py
src/: lib.rs
src/lick_core/: __init__.py
src/rLIC/: __init__.py  _core.pyi
src/rlic/: __init__.py  _boundaries.py  _core.pyi  _histeq.py  _histeq_adaptive_strategy.py  _lib.py  _typing.py
tests/: conftest.py  test_boundaries.py  test_convolution.py  test_exceptions.py  test_image_processing.py  test_regression.py  test_regressions.py
tests/data/regressions/: u0_v0_k0_vel.npy  u0_v1_k0_pol.npy  u0_v1_k0_vel.npy  u1_v0_k0_pol.npy  u1_v0_k0_vel.npy  u1_v1_k0_vel.npy
