[package]
name = "rlic"
version = "0.5.1" # keep in sync with pyproject.toml
edition = "2021"
rust-version = "1.74" # 2023-11-16

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3" tells pyo3 (and maturin) to build using the stable ABI
# the Python version used for building determines the minimum compatible installation target
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3"] }
numpy = "0.27.0"
num-traits = "0.2.19"
either = "1.15.0"

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#abort-on-panic
panic = "abort"
# https://nnethercote.github.io/perf-book/build-configuration.html#strip-debug-info-and-symbols
strip = "symbols"
