[package]
name = "rlic"
version = "0.5.3" # keep in sync with pyproject.toml
edition = "2021"
rust-version = "1.83" # 2024-11-28

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = { git = "https://github.com/Icxolu/rust-numpy", branch = "abi3t", version = "0.29.0" }
num-traits = "0.2.19"
either = "1.15.0"

[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#abort-on-panic
panic = "abort"
# https://nnethercote.github.io/perf-book/build-configuration.html#strip-debug-info-and-symbols
strip = "symbols"

[features]
default = ["fma", "branchless"]
fma = []
branchless = []
